admin/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: argocd
